<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF"
    android:visibility="visible"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="731dp"
        android:background="#130F0F"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="299dp"
            android:layout_height="147dp"
            android:layout_marginHorizontal="55dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
            android:text="Create Account"
            android:textAlignment="center"
            android:textColor="#FAF6F6"
            android:textSize="58sp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170px"
            android:layout_marginTop="70px"
            android:layout_marginRight="170px"
            android:background="@drawable/style_border"
            android:ems="10"
            android:hint="@string/NombreSignUp"
            android:inputType="textPersonName"
            android:textColorHighlight="#FDF9F9"
            android:textColorHint="@color/white"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170px"
            android:layout_marginTop="70px"
            android:layout_marginRight="170px"
            android:background="@drawable/style_border"
            android:ems="10"
            android:hint="@string/NuevoPassword"
            android:inputType="textPersonName"
            android:textColorHighlight="#FDF9F9"
            android:textColorHint="@color/white"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170px"
            android:layout_marginTop="70px"
            android:layout_marginRight="170px"
            android:background="@drawable/style_border"
            android:ems="10"
            android:hint="@string/ConfirmarPassword"
            android:inputType="textPersonName"
            android:textColorHighlight="#FDF9F9"
            android:textColorHint="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="260px"
            android:layout_marginTop="180px"
            android:layout_marginRight="260px"
            android:text="@string/ButtonRegister"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>