<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF"
    android:visibility="visible"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="731dp"
        android:background="#130F0F"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="350px"
            app:srcCompat="@drawable/icons3" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="170px"
            android:layout_marginTop="70px"
            android:layout_marginRight="170px"
            android:background="@drawable/style_border3"
            android:ems="10"
            android:hint="@string/Username"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHighlight="#FDF9F9"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="170px"
            android:layout_marginTop="20px"
            android:layout_marginRight="170px"
            android:background="@drawable/style_border3"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="103dp"
            android:layout_height="50dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="45dp"
            android:layout_marginRight="400dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:text="@string/ButtonLogin"
            android:textColorLink="#CFC8C8"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100px"
            android:text=" You do not have an account"
            android:textAlignment="center"
            android:textColor="#FAF6F6"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="match_parent"
            android:layout_height="130px"
            android:layout_marginLeft="260px"
            android:layout_marginTop="50px"
            android:layout_marginRight="260px"
            android:text="@string/ButtonRegister"
            android:textSize="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>